crates/mcb-server/tests/contract/snapshots/contract__memory_contract_tests__memory_get_observation_ids_empty.snap
---
source: crates/mcb-server/tests/contract/memory_contract_tests.rs
expression: "snapshot_payload(&request, status, &response)"
---
{
  "request": {
    "jsonrpc": "2.0",
    "method": "tools/call",
    "params": {
      "name": "get_memories",
      "arguments": {
        "ids": []
      }
    },
    "id": 1
  },
  "status": 200,
  "response": {
    "jsonrpc": "2.0",
    "error": {
      "code": -32602,
      "message": "Missing execution provenance for 'get_memories': session_id, repo_id, operator_id, machine_id, agent_program, model_id, delegated, timestamp"
    },
    "id": 1
  }
}
