crates/mcb-server/tests/contract/snapshots/contract__memory_contract_tests__memory_invalid_args.snap
---
source: crates/mcb-server/tests/contract/memory_contract_tests.rs
expression: "snapshot_payload(&request, status, &response)"
---
{
  "request": {
    "jsonrpc": "2.0",
    "method": "tools/call",
    "params": {
      "name": "list_memories",
      "arguments": {
        "limit": "not_a_number"
      }
    },
    "id": 1
  },
  "status": 200,
  "response": {
    "jsonrpc": "2.0",
    "error": {
      "code": -32602,
      "message": "Missing execution provenance for 'list_memories': session_id, repo_id, operator_id, machine_id, agent_program, model_id, delegated, timestamp"
    },
    "id": 1
  }
}
